--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -13,10 +13,12 @@ crate-type = ["staticlib", "cdylib", "rlib"]
 tauri-build = { version = "2", features = [] }
 
 [dependencies]
-tauri = { version = "2", features = ["shell-open"] }
+tauri = { version = "2", features = [] }
 tauri-plugin-shell = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
+chrono = "0.4"
+tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
 
 [profile.release]
 panic = "abort"
