--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -19,6 +19,7 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 chrono = "0.4"
 tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
+dirs = "6"
 
 [profile.release]
 panic = "abort"
