Migrate from Tauri to Electron
- Replace Tauri/Rust backend with Electron/Node.js
- Add Electron Forge with Vite plugin for building
- Create electron/ directory with main process code
- Implement IPC handlers for language, chat, and data operations
- Update frontend to use window.electronAPI instead of Tauri invoke
- Fix Claude CLI spawning (stdin must be ignored)
- Add file-based debug logging for packaged app

--- a/package.json
+++ b/package.json
@@ -1,25 +1,36 @@
 {
   "name": "your-second-first-language",
+  "productName": "Your Second First Language",
   "private": true,
   "version": "0.1.0",
-  "type": "module",
+  "description": "Learn a new language the way you learned your first",
+  "main": ".vite/build/main.js",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "lint": "eslint --ext .ts,.tsx .",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@tauri-apps/api": "^2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-markdown": "^10.1.0"
+    "react-markdown": "^10.1.0",
+    "fs-extra": "^11.2.0"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^2",
+    "@electron-forge/cli": "^7.4.0",
+    "@electron-forge/maker-deb": "^7.4.0",
+    "@electron-forge/maker-rpm": "^7.4.0",
+    "@electron-forge/maker-squirrel": "^7.4.0",
+    "@electron-forge/maker-zip": "^7.4.0",
+    "@electron-forge/plugin-vite": "^7.4.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/node": "^20.14.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.4",
+    "electron": "^31.0.0",
     "typescript": "~5.6.2",
     "vite": "^6.0.3"
   }
